grammar/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from grammar/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> prog                               (0)
	prog -> dcl ';' prog                               (1)
	prog -> func prog                                  (2)
	prog ->                                            (3)
	dcl -> 'extern' type some_id_parm_types            (4)
	dcl -> 'extern' 'void' some_id_parm_types          (5)
	dcl -> type some_id_parm_types                     (6)
	dcl -> 'void' some_id_parm_types                   (7)
	var_decl -> id '[' intcon ']'                      (8)
	var_decl -> id                                     (9)
	type -> 'char'                                     (10)
	type -> 'int'                                      (11)
	parm_types -> 'void'                               (12)
	parm_types -> some_parm_type                       (13)
	func -> type id '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'   (14)
	func -> 'void' id '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'   (15)
	stmt -> 'if' '(' expr ')' stmt_block               (16)
	stmt -> 'if' '(' expr ')' stmt_block 'else' stmt_block   (17)
	stmt -> 'while' '(' expr ')' stmt_block            (18)
	stmt -> 'for' '(' maybe_assg ';' maybe_expr ';' maybe_assg ')' stmt_block   (19)
	stmt -> stmt_block                                 (20)
	stmt_block -> '{' many_stmt '}'                    (21)
	stmt_block -> 'return' maybe_expr ';'              (22)
	stmt_block -> id '(' many_expr ')' ';'             (23)
	stmt_block -> ';'                                  (24)
	assg -> id '[' expr ']' '=' expr                   (25)
	assg -> id '=' expr                                (26)
	expr -> '-' expr                                   (27)
	expr -> '!' expr                                   (28)
	expr -> expr '+' expr                              (29)
	expr -> expr '-' expr                              (30)
	expr -> expr '*' expr                              (31)
	expr -> expr '/' expr                              (32)
	expr -> expr '==' expr                             (33)
	expr -> expr '!=' expr                             (34)
	expr -> expr '<=' expr                             (35)
	expr -> expr '<' expr                              (36)
	expr -> expr '>=' expr                             (37)
	expr -> expr '>' expr                              (38)
	expr -> expr '&&' expr                             (39)
	expr -> expr '||' expr                             (40)
	expr -> id '(' many_expr ')'                       (41)
	expr -> id '[' expr ']'                            (42)
	expr -> id                                         (43)
	expr -> '(' expr ')'                               (44)
	expr -> intcon                                     (45)
	expr -> charcon                                    (46)
	expr -> stringcon                                  (47)
	many_stmt -> stmt many_stmt                        (48)
	many_stmt ->                                       (49)
	maybe_assg -> assg                                 (50)
	maybe_assg ->                                      (51)
	maybe_expr -> expr                                 (52)
	maybe_expr ->                                      (53)
	many_expr -> expr ',' many_expr                    (54)
	many_expr -> expr                                  (55)
	many_expr ->                                       (56)
	some_parm_type -> type id '[' ']' ',' some_parm_type   (57)
	some_parm_type -> type id '[' ']'                  (58)
	some_parm_type -> type id ',' some_parm_type       (59)
	some_parm_type -> type id                          (60)
	some_id_parm_types -> id '(' parm_types ')' ',' some_id_parm_types   (61)
	some_id_parm_types -> id '(' parm_types ')'        (62)
	some_var_decl -> var_decl ',' some_var_decl        (63)
	some_var_decl -> var_decl                          (64)
	many_fun_var_decl -> type some_var_decl ';' many_fun_var_decl   (65)
	many_fun_var_decl ->                               (66)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { TokenId $$ }
	intcon         { TokenInt $$ }
	charcon        { TokenChar $$ }
	stringcon      { TokenString $$ }
	'('            { TokenBracket LeftSide Paren }
	')'            { TokenBracket RightSide Paren }
	'{'            { TokenBracket LeftSide Brace }
	'}'            { TokenBracket RightSide Brace }
	'['            { TokenBracket LeftSide Bracket }
	']'            { TokenBracket RightSide Bracket }
	'='            { TokenAssign }
	';'            { TokenSemiColon }
	','            { TokenComma }
	'!'            { TokenUnaryOp BoolNegation }
	'+'            { TokenBinOp Plus }
	'-'            { TokenBinOp Minus }
	'*'            { TokenBinOp Mul }
	'/'            { TokenBinOp Div }
	'=='           { TokenRelOp Equal }
	'!='           { TokenRelOp NotEqual }
	'<='           { TokenRelOp LessThanEqual }
	'<'            { TokenRelOp LessThan }
	'>='           { TokenRelOp GreaterThanEqual }
	'>'            { TokenRelOp GreaterThan }
	'&&'           { TokenLogicalOp And }
	'||'           { TokenLogicalOp Or }
	'if'           { TokenReserved TokenIf }
	'else'         { TokenReserved TokenElse }
	'while'        { TokenReserved TokenWhile }
	'for'          { TokenReserved TokenFor }
	'return'       { TokenReserved TokenReturn }
	'extern'       { TokenReserved TokenExtern }
	'char'         { TokenType TTypeChar }
	'int'          { TokenType TTypeInt }
	'void'         { TokenType TTypeVoid }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	prog            rules 1, 2, 3
	dcl             rules 4, 5, 6, 7
	var_decl        rules 8, 9
	type            rules 10, 11
	parm_types      rules 12, 13
	func            rules 14, 15
	stmt            rules 16, 17, 18, 19, 20
	stmt_block      rules 21, 22, 23, 24
	assg            rules 25, 26
	expr            rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47
	many_stmt       rules 48, 49
	maybe_assg      rules 50, 51
	maybe_expr      rules 52, 53
	many_expr       rules 54, 55, 56
	some_parm_type  rules 57, 58, 59, 60
	some_id_parm_types rules 61, 62
	some_var_decl   rules 63, 64
	many_fun_var_decl rules 65, 66

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'extern'       shift, and enter state 4
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 11
	%eof           reduce using rule 3

	prog           goto state 8
	dcl            goto state 2
	type           goto state 9
	func           goto state 10

State 1


	'extern'       shift, and enter state 4
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 7

	dcl            goto state 2
	type           goto state 3

State 2

	prog -> dcl . ';' prog                              (rule 1)

	';'            shift, and enter state 20


State 3

	dcl -> type . some_id_parm_types                    (rule 6)

	id             shift, and enter state 17

	some_id_parm_typesgoto state 15

State 4

	dcl -> 'extern' . type some_id_parm_types           (rule 4)
	dcl -> 'extern' . 'void' some_id_parm_types         (rule 5)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 19

	type           goto state 18

State 5

	type -> 'char' .                                    (rule 10)

	id             reduce using rule 10


State 6

	type -> 'int' .                                     (rule 11)

	id             reduce using rule 11


State 7

	dcl -> 'void' . some_id_parm_types                  (rule 7)

	id             shift, and enter state 17

	some_id_parm_typesgoto state 12

State 8

	%start_parse -> prog .                              (rule 0)

	%eof           accept


State 9

	dcl -> type . some_id_parm_types                    (rule 6)
	func -> type . id '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 14)

	id             shift, and enter state 16

	some_id_parm_typesgoto state 15

State 10

	prog -> func . prog                                 (rule 2)

	'extern'       shift, and enter state 4
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 11
	%eof           reduce using rule 3

	prog           goto state 14
	dcl            goto state 2
	type           goto state 9
	func           goto state 10

State 11

	dcl -> 'void' . some_id_parm_types                  (rule 7)
	func -> 'void' . id '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 15)

	id             shift, and enter state 13

	some_id_parm_typesgoto state 12

State 12

	dcl -> 'void' some_id_parm_types .                  (rule 7)

	';'            reduce using rule 7


State 13

	func -> 'void' id . '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 15)
	some_id_parm_types -> id . '(' parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id . '(' parm_types ')'       (rule 62)

	'('            shift, and enter state 26


State 14

	prog -> func prog .                                 (rule 2)

	%eof           reduce using rule 2


State 15

	dcl -> type some_id_parm_types .                    (rule 6)

	';'            reduce using rule 6


State 16

	func -> type id . '(' parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 14)
	some_id_parm_types -> id . '(' parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id . '(' parm_types ')'       (rule 62)

	'('            shift, and enter state 25


State 17

	some_id_parm_types -> id . '(' parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id . '(' parm_types ')'       (rule 62)

	'('            shift, and enter state 24


State 18

	dcl -> 'extern' type . some_id_parm_types           (rule 4)

	id             shift, and enter state 17

	some_id_parm_typesgoto state 23

State 19

	dcl -> 'extern' 'void' . some_id_parm_types         (rule 5)

	id             shift, and enter state 17

	some_id_parm_typesgoto state 22

State 20

	prog -> dcl ';' . prog                              (rule 1)

	'extern'       shift, and enter state 4
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 11
	%eof           reduce using rule 3

	prog           goto state 21
	dcl            goto state 2
	type           goto state 9
	func           goto state 10

State 21

	prog -> dcl ';' prog .                              (rule 1)

	%eof           reduce using rule 1


State 22

	dcl -> 'extern' 'void' some_id_parm_types .         (rule 5)

	';'            reduce using rule 5


State 23

	dcl -> 'extern' type some_id_parm_types .           (rule 4)

	';'            reduce using rule 4


State 24

	some_id_parm_types -> id '(' . parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' . parm_types ')'       (rule 62)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 30

	type           goto state 27
	parm_types     goto state 32
	some_parm_type goto state 29

State 25

	func -> type id '(' . parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 14)
	some_id_parm_types -> id '(' . parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' . parm_types ')'       (rule 62)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 30

	type           goto state 27
	parm_types     goto state 31
	some_parm_type goto state 29

State 26

	func -> 'void' id '(' . parm_types ')' '{' many_fun_var_decl many_stmt '}'    (rule 15)
	some_id_parm_types -> id '(' . parm_types ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' . parm_types ')'       (rule 62)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6
	'void'         shift, and enter state 30

	type           goto state 27
	parm_types     goto state 28
	some_parm_type goto state 29

State 27

	some_parm_type -> type . id '[' ']' ',' some_parm_type    (rule 57)
	some_parm_type -> type . id '[' ']'                 (rule 58)
	some_parm_type -> type . id ',' some_parm_type      (rule 59)
	some_parm_type -> type . id                         (rule 60)

	id             shift, and enter state 36


State 28

	func -> 'void' id '(' parm_types . ')' '{' many_fun_var_decl many_stmt '}'    (rule 15)
	some_id_parm_types -> id '(' parm_types . ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types . ')'       (rule 62)

	')'            shift, and enter state 35


State 29

	parm_types -> some_parm_type .                      (rule 13)

	')'            reduce using rule 13


State 30

	parm_types -> 'void' .                              (rule 12)

	')'            reduce using rule 12


State 31

	func -> type id '(' parm_types . ')' '{' many_fun_var_decl many_stmt '}'    (rule 14)
	some_id_parm_types -> id '(' parm_types . ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types . ')'       (rule 62)

	')'            shift, and enter state 34


State 32

	some_id_parm_types -> id '(' parm_types . ')' ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types . ')'       (rule 62)

	')'            shift, and enter state 33


State 33

	some_id_parm_types -> id '(' parm_types ')' . ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types ')' .       (rule 62)

	';'            reduce using rule 62
	','            shift, and enter state 40


State 34

	func -> type id '(' parm_types ')' . '{' many_fun_var_decl many_stmt '}'    (rule 14)
	some_id_parm_types -> id '(' parm_types ')' . ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types ')' .       (rule 62)

	'{'            shift, and enter state 41
	';'            reduce using rule 62
	','            shift, and enter state 40


State 35

	func -> 'void' id '(' parm_types ')' . '{' many_fun_var_decl many_stmt '}'    (rule 15)
	some_id_parm_types -> id '(' parm_types ')' . ',' some_id_parm_types    (rule 61)
	some_id_parm_types -> id '(' parm_types ')' .       (rule 62)

	'{'            shift, and enter state 39
	';'            reduce using rule 62
	','            shift, and enter state 40


State 36

	some_parm_type -> type id . '[' ']' ',' some_parm_type    (rule 57)
	some_parm_type -> type id . '[' ']'                 (rule 58)
	some_parm_type -> type id . ',' some_parm_type      (rule 59)
	some_parm_type -> type id .                         (rule 60)

	')'            reduce using rule 60
	'['            shift, and enter state 37
	','            shift, and enter state 38


State 37

	some_parm_type -> type id '[' . ']' ',' some_parm_type    (rule 57)
	some_parm_type -> type id '[' . ']'                 (rule 58)

	']'            shift, and enter state 47


State 38

	some_parm_type -> type id ',' . some_parm_type      (rule 59)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6

	type           goto state 27
	some_parm_type goto state 46

State 39

	func -> 'void' id '(' parm_types ')' '{' . many_fun_var_decl many_stmt '}'    (rule 15)

	id             reduce using rule 66
	'{'            reduce using rule 66
	'}'            reduce using rule 66
	';'            reduce using rule 66
	'if'           reduce using rule 66
	'while'        reduce using rule 66
	'for'          reduce using rule 66
	'return'       reduce using rule 66
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6

	type           goto state 42
	many_fun_var_declgoto state 45

State 40

	some_id_parm_types -> id '(' parm_types ')' ',' . some_id_parm_types    (rule 61)

	id             shift, and enter state 17

	some_id_parm_typesgoto state 44

State 41

	func -> type id '(' parm_types ')' '{' . many_fun_var_decl many_stmt '}'    (rule 14)

	id             reduce using rule 66
	'{'            reduce using rule 66
	'}'            reduce using rule 66
	';'            reduce using rule 66
	'if'           reduce using rule 66
	'while'        reduce using rule 66
	'for'          reduce using rule 66
	'return'       reduce using rule 66
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6

	type           goto state 42
	many_fun_var_declgoto state 43

State 42

	many_fun_var_decl -> type . some_var_decl ';' many_fun_var_decl    (rule 65)

	id             shift, and enter state 62

	var_decl       goto state 60
	some_var_decl  goto state 61

State 43

	func -> type id '(' parm_types ')' '{' many_fun_var_decl . many_stmt '}'    (rule 14)

	id             shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 49
	';'            shift, and enter state 54
	'if'           shift, and enter state 55
	'while'        shift, and enter state 56
	'for'          shift, and enter state 57
	'return'       shift, and enter state 58

	stmt           goto state 49
	stmt_block     goto state 50
	many_stmt      goto state 59

State 44

	some_id_parm_types -> id '(' parm_types ')' ',' some_id_parm_types .    (rule 61)

	';'            reduce using rule 61


State 45

	func -> 'void' id '(' parm_types ')' '{' many_fun_var_decl . many_stmt '}'    (rule 15)

	id             shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 49
	';'            shift, and enter state 54
	'if'           shift, and enter state 55
	'while'        shift, and enter state 56
	'for'          shift, and enter state 57
	'return'       shift, and enter state 58

	stmt           goto state 49
	stmt_block     goto state 50
	many_stmt      goto state 51

State 46

	some_parm_type -> type id ',' some_parm_type .      (rule 59)

	')'            reduce using rule 59


State 47

	some_parm_type -> type id '[' ']' . ',' some_parm_type    (rule 57)
	some_parm_type -> type id '[' ']' .                 (rule 58)

	')'            reduce using rule 58
	','            shift, and enter state 48


State 48

	some_parm_type -> type id '[' ']' ',' . some_parm_type    (rule 57)

	'char'         shift, and enter state 5
	'int'          shift, and enter state 6

	type           goto state 27
	some_parm_type goto state 83

State 49

	many_stmt -> stmt . many_stmt                       (rule 48)

	id             shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 49
	';'            shift, and enter state 54
	'if'           shift, and enter state 55
	'while'        shift, and enter state 56
	'for'          shift, and enter state 57
	'return'       shift, and enter state 58

	stmt           goto state 49
	stmt_block     goto state 50
	many_stmt      goto state 82

State 50

	stmt -> stmt_block .                                (rule 20)

	id             reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	';'            reduce using rule 20
	'if'           reduce using rule 20
	'while'        reduce using rule 20
	'for'          reduce using rule 20
	'return'       reduce using rule 20


State 51

	func -> 'void' id '(' parm_types ')' '{' many_fun_var_decl many_stmt . '}'    (rule 15)

	'}'            shift, and enter state 81


State 52

	stmt_block -> id . '(' many_expr ')' ';'            (rule 23)

	'('            shift, and enter state 80


State 53

	stmt_block -> '{' . many_stmt '}'                   (rule 21)

	id             shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 49
	';'            shift, and enter state 54
	'if'           shift, and enter state 55
	'while'        shift, and enter state 56
	'for'          shift, and enter state 57
	'return'       shift, and enter state 58

	stmt           goto state 49
	stmt_block     goto state 50
	many_stmt      goto state 79

State 54

	stmt_block -> ';' .                                 (rule 24)

	id             reduce using rule 24
	'{'            reduce using rule 24
	'}'            reduce using rule 24
	';'            reduce using rule 24
	'if'           reduce using rule 24
	'else'         reduce using rule 24
	'while'        reduce using rule 24
	'for'          reduce using rule 24
	'return'       reduce using rule 24


State 55

	stmt -> 'if' . '(' expr ')' stmt_block              (rule 16)
	stmt -> 'if' . '(' expr ')' stmt_block 'else' stmt_block    (rule 17)

	'('            shift, and enter state 78


State 56

	stmt -> 'while' . '(' expr ')' stmt_block           (rule 18)

	'('            shift, and enter state 77


State 57

	stmt -> 'for' . '(' maybe_assg ';' maybe_expr ';' maybe_assg ')' stmt_block    (rule 19)

	'('            shift, and enter state 76


State 58

	stmt_block -> 'return' . maybe_expr ';'             (rule 22)

	id             shift, and enter state 69
	intcon         shift, and enter state 70
	charcon        shift, and enter state 71
	stringcon      shift, and enter state 72
	'('            shift, and enter state 73
	';'            reduce using rule 53
	'!'            shift, and enter state 74
	'-'            shift, and enter state 75

	expr           goto state 67
	maybe_expr     goto state 68

State 59

	func -> type id '(' parm_types ')' '{' many_fun_var_decl many_stmt . '}'    (rule 14)

	'}'            shift, and enter state 66


State 60

	some_var_decl -> var_decl . ',' some_var_decl       (rule 63)
	some_var_decl -> var_decl .                         (rule 64)

	';'            reduce using rule 64
	','            shift, and enter state 65


State 61

	many_fun_var_decl -> type some_var_decl . ';' many_fun_var_decl    (rule 65)

	';'            shift, and enter state 64


State 62

	var_decl -> id . '[' intcon ']'                     (rule 8)
	var_decl -> id .                                    (rule 9)

	'['            shift, and enter state 63
	';'            reduce using rule 9
	','            reduce using rule 9


State 63

	var_decl -> id '[' . intcon ']'                     (rule 8)

	intcon         shift, and enter state 112


State 64

	many_fun_var_decl -> type some_var_decl ';' . many_fun_var_decl    (rule 65)

	id             reduce using rule 66
	'{'            reduce using rule 66
	'}'            reduce using rule 66
	';'            reduce using rule 66
	'if'           reduce using rule 66
	'while'        reduce using rule 66
	'for'          reduce using rule 66
	'return'       reduce using rule 66
	'char'         shift, and enter state 5
	'int'          shift, and enter state 6

	type           goto state 42
	many_fun_var_declgoto state 111

State 65

	some_var_decl -> var_decl ',' . some_var_decl       (rule 63)

	id             shift, and enter state 62

	var_decl       goto state 60
	some_var_decl  goto state 110

State 66

	func -> type id '(' parm_types ')' '{' many_fun_var_decl many_stmt '}' .    (rule 14)

	'extern'       reduce using rule 14
	'char'         reduce using rule 14
	'int'          reduce using rule 14
	'void'         reduce using rule 14
	%eof           reduce using rule 14


State 67

	expr -> expr . '+' expr                             (rule 29)
	expr -> expr . '-' expr                             (rule 30)
	expr -> expr . '*' expr                             (rule 31)
	expr -> expr . '/' expr                             (rule 32)
	expr -> expr . '==' expr                            (rule 33)
	expr -> expr . '!=' expr                            (rule 34)
	expr -> expr . '<=' expr                            (rule 35)
	expr -> expr . '<' expr                             (rule 36)
	expr -> expr . '>=' expr                            (rule 37)
	expr -> expr . '>' expr                             (rule 38)
	expr -> expr . '&&' expr                            (rule 39)
	expr -> expr . '||' expr                            (rule 40)
	maybe_expr -> expr .                                (rule 52)

	';'            reduce using rule 52
	'+'            shift, and enter state 98
	'-'            shift, and enter state 99
	'*'            shift, and enter state 100
	'/'            shift, and enter state 101
	'=='           shift, and enter state 102
	'!='           shift, and enter state 103
	'<='           shift, and enter state 104
	'<'            shift, and enter state 105
	'>='           shift, and enter state 106
	'>'            shift, and enter state 107
	'&&'           shift, and enter state 108
	'||'           shift, and enter state 109


State 68

	stmt_block -> 'return' maybe_expr . ';'             (rule 22)

	';'            shift, and enter state 97


State 69

	expr -> id . '(' many_expr ')'                      (rule 41)
	expr -> id . '[' expr ']'                           (rule 42)
	expr -> id .                                        (rule 43)
